added docker and test cases
